--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framework7-vue": "^4.3.1",
     "lodash": "^4.17.11",
     "vue": "^2.5.2",
+    "vue-clipboard2": "^0.3.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
