--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "sinon-chai": "^2.14.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "stylus-resources-loader": "^0.0.4",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
